support additional electrum server rpc methods and configurable batch paging